# ChronoEmu

./: README.md
Database/: README.txt
Database/changesets/: changeset_1.txt  changeset_old_changes.sql
Database/development/create/: ChronoLogon.Sql  chrono_logon.sql  chrono_realm.sql
Database/development/realm_updates/: 0029_guilds.sql  1_honor.sql
Database/development/world_updates/: 0001_world_pickpocketing.sql  0026_world_warden.sql  0028_world_spells.sql  0034_world_spell_direction.sql  0038_spell_information.sql
Database/udb_to_chrono/: items_conversion.sql
Dependencies/Configs/: chrono-logonserver.conf  chrono-realms.conf  chrono-world.conf
Dependencies/Sources/: VC90-pcre.vcxproj  VC90-solution.sln  VC90-zlib.vcxproj
Dependencies/lib/: pcre.lib  zlib.lib
Dependencies/lib/Win32/: zlib.lib
Dependencies/lib/x64/: pcre.lib  zlib.lib
Trunk/: configure.ac  extract_svn_revision.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh
Trunk/sql/: ChronoRealm.Sql
Trunk/sql/world_updates/: 1_immune_system.sql  5_remove_graveyards.sql  worldmap_r38.sql
Trunk/src/: Makefile.am
Trunk/src/chrono-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
Trunk/src/chrono-realmserver/: CharacterHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h
Trunk/src/chrono-scripts/src/CreatureScripts/: BlackrockDepths.h  Boss_BlackrockDepths.cpp  Boss_Scholomance.cpp  Boss_Stratholme.cpp  Boss_Uldaman.CPP  Instance_BlackfathomDeeps.cpp  Instance_Deadmines.cpp  Instance_DireMaul.cpp  Instance_DireMaul.h  Instance_Maraudon.cpp  Instance_Maraudon.h  Instance_RagefireChasm.cpp  Instance_RazorfenDowns.cpp  Instance_ScarletMonastery.cpp  Instance_ScarletMonastery.h  Instance_ShadowfangKeep.cpp  Instance_Stockades.cpp  Instance_SunkenTemple.cpp  Instance_WailingCaverns.cpp  Makefile.am  Raid_OnyxiasLair.cpp  Scholomance.h  Setup.cpp  Setup.h  Trash_BlackrockDepths.cpp  Trash_Scholomance.cpp  Trash_Stratholme.cpp  Trash_Uldaman.CPP
Trunk/src/chrono-scripts/src/CreatureScripts/BlackwingLair/: Boss_BlackwingLair.cpp  Raid_BlackwingLair.cpp  Trash_BlackwingLair.cpp
Trunk/src/chrono-scripts/src/CreatureScripts/MoltenCore/: Raid_MCTrash.cpp  Raid_MoltenCore.cpp  Raid_MoltenCore.h
Trunk/src/chrono-scripts/src/CreatureScripts/Naxxramas/: Boss_Naxxramas.cpp  Raid_Naxxramas.cpp  Trash_Naxxramas.cpp
Trunk/src/chrono-scripts/src/CreatureScripts/TempleOfAQ/: Boss_TempleOfAQ.cpp  Raid_TempleOfAQ.cpp  Raid_TempleOfAQ.h  Trash_TempleOfAQ.cpp
Trunk/src/chrono-scripts/src/CreatureScripts/WorldBosses/: Raid_WorldBosses.cpp
Trunk/src/chrono-scripts/src/CreatureScripts/Zones/: AlteracMountains.cpp  Azshara.cpp  Barrens.cpp  DeadwindPass.cpp  Durotar.cpp  Elwyn Forest.cpp  Mulgore.cpp  Stormwind.cpp
Trunk/src/chrono-scripts/src/CreatureScripts/ZulGurub/: Boss_ZulGurub.cpp  Raid_ZulGurub.cpp  Trash_ZulGurub.cpp
Trunk/src/chrono-scripts/src/EventScripts/: Halloween.cpp  Makefile.am  Setup.cpp  WinterVeil.cpp
Trunk/src/chrono-scripts/src/ExtraScripts/: Makefile.am  NeutralGuards.cpp
Trunk/src/chrono-scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_DarkmoonFaire.cpp  Gossip_Guard.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_ShadowFangKeep.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  Gossip_Teldrassil.cpp  Gossip_Theramore.cpp  Gossip_Trainer.cpp  Makefile.am  Setup.cpp  Setup.h
Trunk/src/chrono-scripts/src/MiscScripts/: Creatures.cpp  GameObjects.cpp  Makefile.am  RandomScripts.cpp  Setup.cpp  Setup.h
Trunk/src/chrono-scripts/src/QuestScripts/: ArathiHighlands.cpp  Azshara.cpp  BlastedLands.cpp  Desolace.cpp  Druid.cpp  Duskwood.cpp  Dustwallow_Marsh.cpp  Eastern_Plaguelands.cpp  FirstAid.cpp  HillsbradFoothills.cpp  LochModan.cpp  Mage.cpp  Makefile.am  Mulgore.cpp  Paladin.cpp  QuestGossip.cpp  QuestHooks.cpp  RedridgeMountains.cpp  Setup.cpp  Setup.h  Silverpine_Forest.cpp  Stormwind.cpp  StranglethornVale.cpp  Tanaris.cpp  Teldrassil.cpp  The_Barrens.cpp  ThousandNeedles.cpp  TirisfalGlades.cpp  UnGoro.cpp  Undercity.cpp  Unsorted.cpp  Warrior.cpp  Westfall.cpp
Trunk/src/chrono-scripts/src/SpellHandlers/: DruidSpells.cpp  HunterSpells.cpp  ItemSpells_1.cpp  MageSpells.cpp  Makefile.am  OldSpellCPPStuff.cpp  PaladinSpells.cpp  PriestSpells.cpp  QIspells.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarlockSpells.cpp  WarriorSpells.cpp
Trunk/src/chrono-scripts/src/WorldPvPScripts/: Makefile.am  Setup.cpp  ZoneSilithus.cpp
Trunk/src/chrono-shared/: AuthCodes.h  ByteBuffer.h  CallBack.cpp  CallBack.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  PreallocatedQueue.h  Singleton.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  chronoConfig.h  chrono_getopt.cpp  chrono_getopt.h  hashmap.cpp  hashmap.h  svn_revision.h
Trunk/src/chrono-world/: AIAHealSupport.cpp  AIAHealSupport.h  AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  Chat.cpp  (+175 more)
Trunk/win/: chronoVC90.sln
(+161 files in other folders)
