INCLUDES = -I$(top_srcdir)/src/chrono-logonserver \
   -I$(top_srcdir)/src/chrono-realmserver -I$(top_srcdir)/src/chrono-shared -I$(top_srcdir)/src/chrono-voicechat \
   -I$(top_srcdir)/src/chrono-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../chrono-shared/g3dlite -I$(srcdir)/../../../chrono-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = 
Instance_BlackrockDepths.cpp \
Instance_BlackrockSpire.cpp \
Instance_Deadmines.cpp \
Instance_DireMaul.cpp \
Instance_RagefireChasm.cpp \
Instance_RazorfenDowns.cpp \
Instance_ScarletMonastery.cpp \
Instance_Scholomance.cpp \
Instance_ShadowfangKeep.cpp \
Instance_WailingCaverns.cpp \
Instance_TheStockade.cpp \
Instance_ZulFarrak.cpp \
Raid_BlackTemple.cpp \
Raid_BlackwingLair.cpp \
Raid_MoltenCore.cpp \
Raid_Naxxramas.cpp \
Raid_OnyxiasLair.cpp \
Raid_ZulGurub.cpp \
Raid_WorldBosses.cpp \
Raid_ZulAman.cpp \
../Common/Instance_Base.cpp \
../Common/Base.cpp \
Setup.cpp
