INCLUDES = -I$(top_srcdir)/src/chrono-logonserver \
   -I$(top_srcdir)/src/chrono-realmserver -I$(top_srcdir)/src/chrono-shared -I$(top_srcdir)/src/chrono-voicechat \
   -I$(top_srcdir)/src/chrono-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../chrono-shared/g3dlite -I$(srcdir)/../../../chrono-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunQuestScripts.la

libSunQuestScripts_la_SOURCES = 
Setup.cpp \
../Common/Base.cpp \
ArathiHighlands.cpp \
Azshara.cpp \
BlastedLands.cpp \
Darkshore.cpp \
Desolace.cpp \
Druid.cpp \
Duskwood.cpp \
Dustwallow_Marsh.cpp \
Eastern_Plaguelands.cpp \
FirstAid.cpp \
HillsbradFoothills.cpp \
LochModan.cpp \
Mage.cpp \
Mulgore.cpp \
Paladin.cpp \
QuestGossip.cpp \
QuestHooks.cpp \
RedridgeMountains.cpp \
Silverpine_Forest.cpp \
Stormwind.cpp \
StranglethornVale.cpp \
Tanaris.cpp \
Teldrassil.cpp \
The_Barrens.cpp \
TirisfalGlades.cpp \
Undercity.cpp \
UnGoro.cpp \
Unsorted.cpp \
Warrior.cpp \
Westfall.cpp \
ThousandNeedles.cpp \